--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.26.0",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
     "node-sass": "^4.3.0",
@@ -56,7 +55,9 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
+    "objectpath": "^1.2.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "tv4": "^1.2.7"
   }
 }
