--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "ejs-locals": "^1.0.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "font-awesome-webpack": "0.0.4",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
     "objectpath": "^1.2.1",
+    "orgchart": "^1.3.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "tv4": "^1.2.7"
