--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "font-awesome-webpack": "0.0.4",
+    "html2canvas": "^0.5.0-beta4",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
