--- a/package.json
+++ b/package.json
@@ -15,56 +15,58 @@
     ]
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.9.0",
-    "jade": "^1.11.0",
-    "jade-loader": "^0.8.0",
-    "node-sass": "^4.3.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.1.1",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.9.0",
+    "babel-core": "6.21.0",
+    "babel-loader": "6.2.10",
+    "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-stage-0": "6.16.0",
+    "css-loader": "0.26.1",
+    "file-loader": "0.9.0",
+    "jade": "1.11.0",
+    "jade-loader": "0.8.0",
+    "node-sass": "4.3.0",
+    "rimraf": "2.5.4",
+    "sass-loader": "4.1.1",
+    "script-loader": "0.7.0",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.14.0",
+    "webpack-dev-middleware": "1.9.0",
     "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "^2.4.0"
+    "webpack-merge": "2.4.0"
   },
   "dependencies": {
-    "angular": "^1.6.1",
-    "angular-animate": "^1.6.1",
-    "angular-loading-bar": "^0.9.0",
-    "angular-resource": "^1.6.1",
-    "angular-sanitize": "^1.6.1",
-    "angular-schema-form": "^0.8.13",
-    "angular-schema-form-bootstrap": "^0.2.0",
-    "angular-ui-bootstrap": "^2.4.0",
-    "angular-ui-router": "^0.3.2",
-    "body-parser": "^1.15.2",
-    "bootstrap": "^3.3.7",
-    "co": "^4.6.0",
-    "co-express": "^1.2.2",
-    "connect-mongodb-session": "^1.3.0",
-    "cookie-parser": "^1.4.3",
-    "ejs-locals": "^1.0.2",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
+    "angular": "1.6.1",
+    "angular-animate": "1.6.1",
+    "angular-chart.js": "^1.1.1",
+    "angular-loading-bar": "0.9.0",
+    "angular-resource": "1.6.1",
+    "angular-sanitize": "1.6.1",
+    "angular-schema-form": "0.8.13",
+    "angular-schema-form-bootstrap": "0.2.0",
+    "angular-ui-bootstrap": "2.4.0",
+    "angular-ui-router": "0.3.2",
+    "body-parser": "1.15.2",
+    "bootstrap": "3.3.7",
+    "chart.js": "^2.6.0",
+    "co": "4.6.0",
+    "co-express": "1.2.2",
+    "connect-mongodb-session": "1.3.0",
+    "cookie-parser": "1.4.3",
+    "ejs-locals": "1.0.2",
+    "express": "4.14.0",
+    "express-session": "1.14.2",
     "font-awesome-webpack": "0.0.4",
-    "html2canvas": "^0.5.0-beta4",
-    "iconv": "^2.2.3",
-    "jquery": "^3.1.1",
-    "lodash": "^4.17.4",
-    "mongoose": "^4.7.6",
-    "node-sass": "^4.4.0",
-    "objectpath": "^1.2.1",
-    "orgchart": "^1.3.4",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "tv4": "^1.2.7"
+    "html2canvas": "0.5.0-beta4",
+    "iconv": "2.2.3",
+    "jquery": "3.1.1",
+    "lodash": "4.17.4",
+    "mongoose": "4.7.6",
+    "node-sass": "4.4.0",
+    "objectpath": "1.2.1",
+    "orgchart": "1.3.4",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "tv4": "1.2.7"
   }
 }
